# quadtree-rs

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  quadtree.h  release.toml
.github/workflows/: rust.yml
c_test/: build_win32.cmd  main.cpp
src/: ffi.rs  lib.rs  rectangle.rs  subdivision.rs
