[package]
name = "quadtree"
version = "0.1.1-alpha.0"
authors = ["Grayson Hay <me@russellhay.com>"]
edition = "2018"
description = "A rust implementation of a quadtree with a C api"
license = "MIT"
repository = "https://github.com/RussTheAerialist/quadtree-rs"

[lib]
crate-type = [ "staticlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.15"
